<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@color/gray">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:id="@+id/masterLinerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:padding="12dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:id="@+id/drop_menu_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingVertical="10dp">

                <LinearLayout
                    android:id="@+id/layoutOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/convertFromTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.0"
                        android:text="@string/convert_from_text"
                        android:textColor="@color/black"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/convert_from_dropdown_menu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.0"
                        android:hint="@string/choice_country"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        app:drawableEndCompat="@drawable/baseline_arrow_drop_down_24"
                        app:drawableRightCompat="@drawable/baseline_arrow_drop_down_24" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linerLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingVertical="10dp">

                <LinearLayout
                    android:id="@+id/linerLayout01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/amountToConvertValueText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.0"
                        android:text="@string/amount_to_convert"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:id="@+id/conversionRateResultText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text="@string/conversion_rate"
                        android:textColor="@color/black"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linerLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/amountToConvertValueEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.0"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        />

                    <TextView
                        android:id="@+id/conversionRateText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="20dp">

                    <Button
                        android:id="@+id/conversionButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingVertical="7dp"
                        android:text="@string/conversion_button"
                        />
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>